--- a/toDoApp.html
+++ b/toDoApp.html
@@ -4,11 +4,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <center>
+        <title>TAREAS POR HACER</title>
+    </center>
 </head>
 
 <body>
+    <center>
+        <h1> <b>TAREAS POR HACER </b></h1>
+    </center>
+    <link rel="stylesheet" href="toDo.css">
+    <br>
+    <div class="containerPrincipal">
+        <div class="encabezado">
+            <form action="formulario" action="">
+                <input type="text" id="tareaInput" placeholder="Agrega tu tarea">
+                <input type="button" class="boton" id="btn-agregar" value="Agregar">
+            </form>
+        </div>
+    </div>
 
+    <div class="Tareas">
+        <div class="encabezado">
+            <ul class="lista" id="listaTarea">
+                <li> </li>
+
+            </ul>
+
+        </div>
+
+    </div>
+
+
+
+
+
+    <script src="toDo.js">   </script>
 </body>
 
 </html>
